...
    <string name="app_name">Student Helper</string>

    <!--home page string resources-->
    <string name="action_settings">Settings</string>
    <string name="agenda">Agenda</string>
    <string name="schedule">schedule</string>
    <string name="gpaCalc">GPA Calculator</string>
    <string name="gradebook">GradeBook</string>
    <string name="group">Group</string>
    <!--Agenda string resources-->
    <string name="title_activity_agenda">Agenda</string>
    <string name="addAssignment">Add Assignment</string>
    <string name="title_activity_add_page">Add an Assignment</string>
...
    <string name="class_label">Class:</string>
    <string name="assignment_label">Assignment:</string>
    <string name="dueDate_label">Set Due Date:</string>
    <!--Edit Assignment String Resources-->
    <string name="title_activity_edit_agenda">Edit An Assignment</string>
    <string name="finishEdit">Finish Edit</string>
    <string name="delete_dialog_yes">Yes</string>
    <string name="delete_dialog_no">No</string>
    <!--Past Assignments String Resources-->
    <string name="title_activity_past_assignments_agenda">Past Assignments</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_reassign">Reassign</string>
    <string name="cancel">cancel</string>
    <!--END OF AGENDA COMPONENT RESOURCES -->


    <string name="title_activity_gpa">GPAActivity</string>
...
