...
        android:maxLength="25"
        android:hint="Class name" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editGradeSpinnerView"
        android:spinnerMode="dropdown"
        android:entries="@array/gradeSpinner"
        android:layout_below="@+id/editCourseTitleEditText"
        android:layout_toEndOf="@+id/editCourseTitleEditText" />

    <TextView
...
        android:entries="@array/creditSpinner"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Apply"
        android:id="@+id/editCourseApplyButton"
        android:layout_below="@+id/editCreditHoursSpinner"
        android:layout_alignParentStart="true" />

    <!--style="?android:attr/buttonStyleSmall"-->

</RelativeLayout>
...
