...
            android:visibility="gone"/>

    </LinearLayout>


    <ListView
        android:id="@+id/editSemesterCoursesListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ListView>


...
