...
        android:layout_alignTop="@+id/detailsEndTime"
        android:layout_alignStart="@+id/detailsStartTimeOutput" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit"
        android:id="@+id/updateStartTimeButton"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/detailsEndTime"
        android:layout_marginBottom="70dp" />

    <Button
...
